tests/src/frontend/typechecking/invalid/positional_default_constructor_multi.sk
base class A(
  x: String,
)  // error, defaults noncontiguous
base class B(y: String = "!\n")
class C(a: String, b: String = ", ") extends A, B
